--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,18 +28,17 @@ repos:
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 3.0.0
     hooks:
-      # - id: bundler-audit
-      # - id: check-mailmap
-      # - id: fasterer
-      # - id: forbid-binary
-      #   exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js|.*\.pdf$)
-      # - id: forbid-space-in-indent
-      #   exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js|.*\.pdf$)
-      # - id: git-check  # Configure in .gitattributes
-      # - id: git-dirty  # Configure in .gitignore
-      # - id: reek
-      # - id: require-ascii
-      # - id: rubocop
+      - id: bundler-audit
+      - id: check-mailmap
+      - id: fasterer
+      - id: forbid-binary
+        exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js|.*\.pdf$)
+      - id: forbid-space-in-indent
+        exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js|.*\.pdf$)
+      - id: git-check  # Configure in .gitattributes
+      - id: git-dirty  # Configure in .gitignore
+      - id: reek
+      - id: rubocop
       - id: script-must-have-extension
       - id: script-must-not-have-extension
       - id: shellcheck
