--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -29,7 +29,35 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
-          python-version: "3.x"
+          python-version: "3.12"
+
+      - name: Install pre-commit
+        run: pip install pre-commit
+
+      - name: Run pre-commit hook
+        id: run_pre_commit
+        run: |
+          pre-commit run check-duplicate-properties-keys --all-files -c .pre-commit-config.yaml 2>&1 | tee pre_commit_output.log
+          if [ ${PIPESTATUS[0]} -ne 0 ]; then
+            echo "pre-commit failed" > pre_commit_status.log
+          else
+            echo "pre-commit succeeded" > pre_commit_status.log
+          fi
+
+      - name: Post a comment on PR
+        if: steps.run_pre_commit.outcome == 'success' || failure()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          STATUS=$(cat pre_commit_status.log)
+          if [ "$STATUS" = "pre-commit failed" ]; then
+            COMMENT_BODY="### :x: Duplicate Properties Keys Detected\n\n**Errors:**\n\`\`\`\n$(cat pre_commit_output.log | tail -n 50)\n\`\`\`\n\nPlease resolve the issues before merging this PR."
+          else
+            COMMENT_BODY="### :white_check_mark: No Duplicate Keys Found\n\nThe pre-commit hook passed successfully."
+          fi
+
+          # Post comment to PR
+          gh pr comment ${{ github.event.pull_request.number }} --body "$COMMENT_BODY"
 
       - name: Get PR data
         id: get-pr-data
