--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: 3.12
       - name: Run Pre-Commit Hooks
         run: |
-          pip install -r requirements_pre_commit.txt
+          pip install -r .github\scripts\requirements_pre_commit.txt
       - run: pre-commit run --all-files -c .pre-commit-config.yaml
         continue-on-error: true
       - name: Set up git config
