--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -44,7 +44,7 @@ jobs:
           gradle-version: 8.12
 
       - name: Generate jar (With Security=${{ matrix.enable_security }})
-        run: ./gradlew clean createExe
+        run: ./gradlew clean build
         env:
           DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
           STIRLING_PDF_DESKTOP_UI: false
@@ -57,7 +57,7 @@ jobs:
 
       - name: Rename binaries
         run: |
-          mv ./build/launch4j/Stirling-PDF.exe ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+          # mv ./build/launch4j/Stirling-PDF.exe ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
           mv ./build/libs/Stirling-PDF-${{ steps.versionNumber.outputs.versionNumber }}.jar ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
       - name: Debug build artifacts
