--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -21,8 +21,8 @@ jobs:
         include:
           - enable_security: true
             file_suffix: "-with-login"
-          - enable_security: false
-            file_suffix: ""
+          # - enable_security: false
+            # file_suffix: ""
     outputs:
       version: ${{ steps.versionNumber.outputs.versionNumber }}
     steps:
