--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -17,10 +17,10 @@ jobs:
       # attestations: write
     strategy:
       matrix:
-        enable_security: [false]
+        enable_security: [true, false]
         include:
-          # - enable_security: true
-            # file_suffix: "-with-login"
+          - enable_security: true
+            file_suffix: "-with-login"
           - enable_security: false
             file_suffix: ""
     outputs:
@@ -41,13 +41,13 @@ jobs:
 
       - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
         with:
-          gradle-version: 8.7
+          gradle-version: 8.12
 
       - name: Generate jar (With Security=${{ matrix.enable_security }})
         run: ./gradlew clean build --stacktrace
-        env:
-          DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
-          STIRLING_PDF_DESKTOP_UI: false
+        # env:
+        #   DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
+        #   STIRLING_PDF_DESKTOP_UI: false
 
       - name: Get version number
         id: versionNumber
