--- a/exampleYmlFiles/docker-compose-latest-fat-security.yml
+++ b/exampleYmlFiles/docker-compose-latest-fat-security.yml
@@ -1,4 +1,3 @@
-version: '3.3'
 services:
   stirling-pdf:
     container_name: Stirling-PDF-Security-Fat
@@ -8,19 +7,19 @@ services:
         limits:
           memory: 4G
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/api/v1/info/status | grep -q 'UP' && curl -fL http://localhost:8080/ | grep -q 'Please sign in'"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/api/v1/info/status | grep -q 'UP'"]
       interval: 5s
       timeout: 10s
       retries: 16
     ports:
       - 8080:8080
     volumes:
-      - /stirling/latest/data:/usr/share/tessdata:rw
-      - /stirling/latest/config:/configs:rw
-      - /stirling/latest/logs:/logs:rw
+      - ./stirling/latest/data:/usr/share/tessdata:rw
+      - ./stirling/latest/config:/configs:rw
+      - ./stirling/latest/logs:/logs:rw
     environment:
       DOCKER_ENABLE_SECURITY: "true"
-      SECURITY_ENABLELOGIN: "true"
+      SECURITY_ENABLELOGIN: "false"
       PUID: 1002
       PGID: 1002
       UMASK: "022"
