--- a/exampleYmlFiles/docker-compose-latest-security.yml
+++ b/exampleYmlFiles/docker-compose-latest-security.yml
@@ -1,4 +1,3 @@
-version: '3.3'
 services:
   stirling-pdf:
     container_name: Stirling-PDF-Security
@@ -13,11 +12,11 @@ services:
       timeout: 10s
       retries: 16
     ports:
-      - 8080:8080
+      - "8080:8080"
     volumes:
-      - /stirling/latest/data:/usr/share/tessdata:rw
-      - /stirling/latest/config:/configs:rw
-      - /stirling/latest/logs:/logs:rw
+      - ./stirling/latest/data:/usr/share/tessdata:rw
+      - ./stirling/latest/config:/configs:rw
+      - ./stirling/latest/logs:/logs:rw
     environment:
       DOCKER_ENABLE_SECURITY: "true"
       SECURITY_ENABLELOGIN: "true"
