--- a/exampleYmlFiles/test_cicd.yml
+++ b/exampleYmlFiles/test_cicd.yml
@@ -1,14 +1,13 @@
-version: '3.3'
 services:
   stirling-pdf:
-    container_name: Stirling-PDF-Lite-Security
-    image: ludy87/s-pdf:latest-lite
+    container_name: Stirling-PDF-Security-Fat
+    image: ludy87/s-pdf:latest-fat
     deploy:
       resources:
         limits:
-          memory: 2G
+          memory: 4G
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/api/v1/info/status | grep -q 'UP' && curl -fL http://localhost:8080/ | grep -q 'Please sign in'"]
+      test: ["CMD-SHELL", "curl -f -H 'X-API-KEY: 123456789' http://localhost:8080/api/v1/info/status | grep -q 'UP'"]
       interval: 5s
       timeout: 10s
       retries: 16
@@ -21,11 +20,15 @@ services:
     environment:
       DOCKER_ENABLE_SECURITY: "true"
       SECURITY_ENABLELOGIN: "true"
+      PUID: 1002
+      PGID: 1002
+      UMASK: "022"
       SYSTEM_DEFAULTLOCALE: en-US
-      UI_APPNAME: Stirling-PDF-Lite
-      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF-Lite Latest with Security
-      UI_APPNAMENAVBAR: Stirling-PDF-Lite Latest
+      UI_APPNAME: Stirling-PDF
+      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF Latest-fat with Security
+      UI_APPNAMENAVBAR: Stirling-PDF Latest-fat
       SYSTEM_MAXFILESIZE: "100"
       METRICS_ENABLED: "true"
       SYSTEM_GOOGLEVISIBILITY: "true"
+      SECURITY_CUSTOMGLOBALAPIKEY: "123456789"
     restart: on-failure:5
