--- a/build.gradle
+++ b/build.gradle
@@ -53,14 +53,14 @@ sourceSets {
             if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
                 exclude "stirling/software/SPDF/config/security/**"
                 exclude "stirling/software/SPDF/controller/api/DatabaseController.java"
-                // exclude "stirling/software/SPDF/controller/api/UserController.java"
-                // exclude "stirling/software/SPDF/controller/api/H2SQLCondition.java"
+                exclude "stirling/software/SPDF/controller/api/UserController.java"
+                exclude "stirling/software/SPDF/controller/api/H2SQLCondition.java"
                 exclude "stirling/software/SPDF/controller/web/AccountWebController.java"
                 exclude "stirling/software/SPDF/controller/web/DatabaseWebController.java"
                 exclude "stirling/software/SPDF/model/ApiKeyAuthenticationToken.java"
                 exclude "stirling/software/SPDF/model/AttemptCounter.java"
                 exclude "stirling/software/SPDF/model/Authority.java"
-                // exclude "stirling/software/SPDF/model/BackupNotFoundException.java"
+                exclude "stirling/software/SPDF/model/BackupNotFoundException.java"
                 exclude "stirling/software/SPDF/model/PersistentLogin.java"
                 exclude "stirling/software/SPDF/model/SessionEntity.java"
                 exclude "stirling/software/SPDF/model/User.java"
@@ -74,28 +74,28 @@ sourceSets {
         }
     }
 
-    // test {
-    //     java {
-    //         if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
-    //             exclude "stirling/software/SPDF/config/security/**"
-    //             exclude "stirling/software/SPDF/controller/api/UserControllerTest.java"
-    //             exclude "stirling/software/SPDF/controller/api/DatabaseControllerTest.java"
-    //             exclude "stirling/software/SPDF/controller/web/AccountWebControllerTest.java"
-    //             exclude "stirling/software/SPDF/controller/web/DatabaseWebControllerTest.java"
-    //             exclude "stirling/software/SPDF/model/ApiKeyAuthenticationTokenTest.java"
-    //             exclude "stirling/software/SPDF/model/AttemptCounterTest.java"
-    //             exclude "stirling/software/SPDF/model/AuthorityTest.java"
-    //             exclude "stirling/software/SPDF/model/PersistentLoginTest.java"
-    //             exclude "stirling/software/SPDF/model/SessionEntityTest.java"
-    //             exclude "stirling/software/SPDF/model/UserTest.java"
-    //             exclude "stirling/software/SPDF/repository/**"
-    //         }
+    test {
+        java {
+            if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
+                exclude "stirling/software/SPDF/config/security/**"
+                exclude "stirling/software/SPDF/controller/api/UserControllerTest.java"
+                exclude "stirling/software/SPDF/controller/api/DatabaseControllerTest.java"
+                exclude "stirling/software/SPDF/controller/web/AccountWebControllerTest.java"
+                exclude "stirling/software/SPDF/controller/web/DatabaseWebControllerTest.java"
+                exclude "stirling/software/SPDF/model/ApiKeyAuthenticationTokenTest.java"
+                exclude "stirling/software/SPDF/model/AttemptCounterTest.java"
+                exclude "stirling/software/SPDF/model/AuthorityTest.java"
+                exclude "stirling/software/SPDF/model/PersistentLoginTest.java"
+                exclude "stirling/software/SPDF/model/SessionEntityTest.java"
+                exclude "stirling/software/SPDF/model/UserTest.java"
+                exclude "stirling/software/SPDF/repository/**"
+            }
 
-    //         if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
-    //             exclude "stirling/software/SPDF/UI/impl/**"
-    //         }
-    //     }
-    // }
+            if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
+                exclude "stirling/software/SPDF/UI/impl/**"
+            }
+        }
+    }
 }
 
 openApi {
@@ -147,6 +147,7 @@ jpackage {
     windows {
     	launcherAsService = false
     	appVersion = project.version
+
     	winConsole = false
         winMenu = true  // Creates start menu entry
         winShortcut = true  // Creates desktop shortcut
@@ -282,7 +283,7 @@ spotless {
 //        rules=['unused-dependency']
 //    }
 tasks.wrapper {
-    gradleVersion = "8.7"
+    gradleVersion = "8.12"
 }
 //tasks.withType(JavaCompile) {
 //    options.compilerArgs << "-Xlint:deprecation"
