--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin/
 tmp/
 *.tmp
 *.bak
+*.exe
 *.swp
 *~.nib
 local.properties
@@ -146,18 +147,37 @@ out/
 # cucumber
 /cucumber/reports/**
 
-# Certs
+# Certs and Security Files
 *.p12
+*.pk8
 *.pem
 *.crt
 *.cer
+*.cert
 *.der
 *.key
 *.csr
+*.kdbx
+*.jks
+*.asc
+
+# SSH Keys
+*.pub
+*.priv
+id_rsa
+id_rsa.pub
+id_ecdsa
+id_ecdsa.pub
+id_ed25519
+id_ed25519.pub
+.ssh/
+*ssh
 
 # cache
+.cache
 .ruff_cache
 .mypy_cache
 .pytest_cache
 .ipynb_checkpoints
 
+**/jcef-bundle/
