--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,10 +37,10 @@ jobs:
           java-version: ${{ matrix.jdk-version }}
           distribution: "temurin"
 
-      - name: Build with Gradle and no spring security
-        run: ./gradlew clean build
-        env:
-          DOCKER_ENABLE_SECURITY: false
+      # - name: Build with Gradle and no spring security
+      #   run: ./gradlew clean build
+      #   env:
+      #     DOCKER_ENABLE_SECURITY: false
 
       - name: Build with Gradle and with spring security
         run: ./gradlew clean build
