--- a/build.gradle
+++ b/build.gradle
@@ -49,52 +49,52 @@ licenseReport {
 
 sourceSets {
     main {
-    //     java {
-    //         if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
-    //             exclude "stirling/software/SPDF/config/security/**"
-    //             exclude "stirling/software/SPDF/controller/api/DatabaseController.java"
-    //             exclude "stirling/software/SPDF/controller/api/H2SQLCondition.java"
-    //             exclude "stirling/software/SPDF/controller/api/UserController.java"
-    //             exclude "stirling/software/SPDF/controller/web/AccountWebController.java"
-    //             exclude "stirling/software/SPDF/controller/web/DatabaseWebController.java"
-    //             exclude "stirling/software/SPDF/model/ApiKeyAuthenticationToken.java"
-    //             exclude "stirling/software/SPDF/model/AttemptCounter.java"
-    //             exclude "stirling/software/SPDF/model/Authority.java"
-    //             exclude "stirling/software/SPDF/model/BackupNotFoundException.java"
-    //             exclude "stirling/software/SPDF/model/PersistentLogin.java"
-    //             exclude "stirling/software/SPDF/model/SessionEntity.java"
-    //             exclude "stirling/software/SPDF/model/User.java"
-    //             exclude "stirling/software/SPDF/repository/**"
-    //         }
+        java {
+            if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
+                exclude "stirling/software/SPDF/config/security/**"
+                exclude "stirling/software/SPDF/controller/api/DatabaseController.java"
+                exclude "stirling/software/SPDF/controller/api/H2SQLCondition.java"
+                exclude "stirling/software/SPDF/controller/api/UserController.java"
+                exclude "stirling/software/SPDF/controller/web/AccountWebController.java"
+                exclude "stirling/software/SPDF/controller/web/DatabaseWebController.java"
+                exclude "stirling/software/SPDF/model/ApiKeyAuthenticationToken.java"
+                exclude "stirling/software/SPDF/model/AttemptCounter.java"
+                exclude "stirling/software/SPDF/model/Authority.java"
+                exclude "stirling/software/SPDF/model/BackupNotFoundException.java"
+                exclude "stirling/software/SPDF/model/PersistentLogin.java"
+                exclude "stirling/software/SPDF/model/SessionEntity.java"
+                exclude "stirling/software/SPDF/model/User.java"
+                exclude "stirling/software/SPDF/repository/**"
+            }
 
-    //         if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
-    //         	exclude "stirling/software/SPDF/UI/impl/**"
-    //         }
-    //     }
-    // }
-    // test {
-    //     java {
-    //         if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
-    //             exclude "stirling/software/SPDF/config/security/**"
-    //             exclude "stirling/software/SPDF/controller/api/DatabaseControllerTest.java"
-    //             exclude "stirling/software/SPDF/controller/api/H2SQLConditionTest.java"
-    //             exclude "stirling/software/SPDF/controller/api/UserControllerTest.java"
-    //             exclude "stirling/software/SPDF/controller/web/AccountWebControllerTest.java"
-    //             exclude "stirling/software/SPDF/controller/web/DatabaseWebControllerTest.java"
-    //             exclude "stirling/software/SPDF/model/ApiKeyAuthenticationTokenTest.java"
-    //             exclude "stirling/software/SPDF/model/AttemptCounterTest.java"
-    //             exclude "stirling/software/SPDF/model/AuthorityTest.java"
-    //             exclude "stirling/software/SPDF/model/BackupNotFoundExceptionTest.java"
-    //             exclude "stirling/software/SPDF/model/PersistentLoginTest.java"
-    //             exclude "stirling/software/SPDF/model/SessionEntityTest.java"
-    //             exclude "stirling/software/SPDF/model/UserTest.java"
-    //             exclude "stirling/software/SPDF/repository/**"
-    //         }
+            if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
+            	exclude "stirling/software/SPDF/UI/impl/**"
+            }
+        }
+    }
+    test {
+        java {
+            if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
+                exclude "stirling/software/SPDF/config/security/**"
+                exclude "stirling/software/SPDF/controller/api/DatabaseControllerTest.java"
+                exclude "stirling/software/SPDF/controller/api/H2SQLConditionTest.java"
+                exclude "stirling/software/SPDF/controller/api/UserControllerTest.java"
+                exclude "stirling/software/SPDF/controller/web/AccountWebControllerTest.java"
+                exclude "stirling/software/SPDF/controller/web/DatabaseWebControllerTest.java"
+                exclude "stirling/software/SPDF/model/ApiKeyAuthenticationTokenTest.java"
+                exclude "stirling/software/SPDF/model/AttemptCounterTest.java"
+                exclude "stirling/software/SPDF/model/AuthorityTest.java"
+                exclude "stirling/software/SPDF/model/BackupNotFoundExceptionTest.java"
+                exclude "stirling/software/SPDF/model/PersistentLoginTest.java"
+                exclude "stirling/software/SPDF/model/SessionEntityTest.java"
+                exclude "stirling/software/SPDF/model/UserTest.java"
+                exclude "stirling/software/SPDF/repository/**"
+            }
 
-    //         if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
-    //             exclude "stirling/software/SPDF/UI/impl/**"
-    //         }
-    //     }
+            if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
+                exclude "stirling/software/SPDF/UI/impl/**"
+            }
+        }
     }
 }
 
