--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -11,10 +11,6 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # permissions:
-    #   contents: write
-      # id-token: write
-      # attestations: write
     strategy:
       matrix:
         enable_security: [true, false]
@@ -36,7 +32,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
         with:
-          java-version: "21"
+          java-version: "17"
           distribution: "temurin"
 
       - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
@@ -169,7 +165,7 @@ jobs:
         with:
           name: signed${{ matrix.file_suffix }}
 
-      - name: Create GitHub Release
+      - name: Upload binaries, attestations and signatures to Release and create GitHub Release
         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
         with:
           tag_name: v${{ needs.build.outputs.version }}
