--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -8,14 +8,13 @@ on:
 
 permissions:
   contents: read
-  packages: write
 
 jobs:
   push:
     runs-on: ubuntu-latest
     permissions:
+      contents: write
       packages: write
-      id-token: write
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
