--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -91,11 +91,11 @@ jobs:
           .\wix.exe /install /quiet
 
       # Install Linux dependencies
-      - name: Install Linux Dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y fakeroot rpm
+      # - name: Install Linux Dependencies
+      #   if: matrix.os == 'ubuntu-latest'
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y fakeroot rpm
 
       # # Build installer
       - name: Build Installer
@@ -110,12 +110,54 @@ jobs:
         shell: bash
         run: |
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            mv "build/jpackage/Stirling-PDF-${{ needs.read_versions.outputs.version }}.exe" "Stirling-PDF-${{ matrix.platform }}-installer.${{ matrix.ext }}"
+            mv "./build/jpackage/Stirling-PDF-${{ needs.read_versions.outputs.version }}.exe" "Stirling-PDF-${{ matrix.platform }}-installer.${{ matrix.ext }}"
           elif [ "${{ matrix.os }}" = "macos-latest" ]; then
-            mv "build/jpackage/Stirling-PDF-${{ steps.versionNumberMac.outputs.versionNumberMac }}.dmg" "Stirling-PDF-${{ needs.read_versions.outputs.version }}-${{ matrix.platform }}.${{ matrix.ext }}"
+            mv "./build/jpackage/Stirling-PDF-${{ steps.versionNumberMac.outputs.versionNumberMac }}.dmg" "Stirling-PDF-${{ needs.read_versions.outputs.version }}-${{ matrix.platform }}.${{ matrix.ext }}"
           else
-            mv "build/jpackage/stirling-pdf_${{ needs.read_versions.outputs.version }}-1_amd64.deb" "Stirling-PDF-${{ needs.read_versions.outputs.version }}-${{ matrix.platform }}.${{ matrix.ext }}"
+            mv "./build/jpackage/stirling-pdf_${{ needs.read_versions.outputs.version }}-1_amd64.deb" "Stirling-PDF-${{ needs.read_versions.outputs.version }}-${{ matrix.platform }}.${{ matrix.ext }}"
           fi
+
+      - name: Debug build artifacts
+        run: |
+          echo "Current Directory: $(pwd)"
+          ls -R ./build/jpackage
+          ls -R ./
+          ls -R
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          name: binaries${{ matrix.platform }}
+          path: |
+            ./Stirling-PDF-*
+
+  sign_verify:
+    needs: build-installers
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            platform: win
+            ext: exe
+          # - os: macos-latest
+          #   platform: mac
+          #   ext: dmg
+          - os: ubuntu-latest
+            platform: linux
+            ext: deb
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
+        with:
+          egress-policy: audit
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: binaries${{ matrix.platform }}
+      - name: Display structure of downloaded files
+        run: ls -R
 
       # # Upload installer as artifact for testing
       # - name: Upload Installer Artifact
