--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -53,12 +53,15 @@ jobs:
       matrix:
         include:
           - os: windows-latest
+            extra: "-installer"
             platform: win
             ext: exe
           # - os: macos-latest
+          #   extra: "-installer"
           #   platform: mac
           #   ext: dmg
           - os: ubuntu-latest
+            extra: ""
             platform: linux
             ext: deb
     runs-on: ${{ matrix.os }}
@@ -110,26 +113,19 @@ jobs:
         shell: bash
         run: |
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            mv "./build/jpackage/Stirling-PDF-${{ needs.read_versions.outputs.version }}.exe" "Stirling-PDF-${{ matrix.platform }}-installer.${{ matrix.ext }}"
+            mv "./build/jpackage/Stirling-PDF-${{ needs.read_versions.outputs.version }}.exe" "${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}"
           elif [ "${{ matrix.os }}" = "macos-latest" ]; then
-            mv "./build/jpackage/Stirling-PDF-${{ steps.versionNumberMac.outputs.versionNumberMac }}.dmg" "Stirling-PDF-${{ needs.read_versions.outputs.version }}-${{ matrix.platform }}.${{ matrix.ext }}"
+            mv "./build/jpackage/Stirling-PDF-${{ steps.versionNumberMac.outputs.versionNumberMac }}.dmg" "${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}"
           else
-            mv "./build/jpackage/stirling-pdf_${{ needs.read_versions.outputs.version }}-1_amd64.deb" "Stirling-PDF-${{ needs.read_versions.outputs.version }}-${{ matrix.platform }}.${{ matrix.ext }}"
+            mv "./build/jpackage/stirling-pdf_${{ needs.read_versions.outputs.version }}-1_amd64.deb" "${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}"
           fi
-
-      - name: Debug build artifacts
-        run: |
-          echo "Current Directory: $(pwd)"
-          ls -R ./build/jpackage
-          ls -R ./
-          ls -R
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
-          name: binaries${{ matrix.platform }}
+          name: binaries-${{ matrix.platform }}
           path: |
-            ./Stirling-PDF-*
+            ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}
 
   sign_verify:
     needs: build-installers
@@ -137,15 +133,18 @@ jobs:
       matrix:
         include:
           - os: windows-latest
+            extra: "-installer"
             platform: win
             ext: exe
           # - os: macos-latest
+          #   extra: "-installer"
           #   platform: mac
           #   ext: dmg
           - os: ubuntu-latest
+            extra: ""
             platform: linux
             ext: deb
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@c95a14d0e5bab51a9f56296a4eb0e416910cd350 # v2.10.3
@@ -155,20 +154,73 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: binaries${{ matrix.platform }}
+          name: binaries-${{ matrix.platform }}
       - name: Display structure of downloaded files
         run: ls -R
 
-      # # Upload installer as artifact for testing
-      # - name: Upload Installer Artifact
-      #   uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
-      #   with:
-      #     name: Stirling-PDF-${{ matrix.platform }}-installer.${{ matrix.ext }}
-      #     path: Stirling-PDF-${{ matrix.platform }}-installer.${{ matrix.ext }}
-      #     retention-days: 1
-      #     if-no-files-found: error
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
 
-      # - name: Upload binaries to release
-      #   uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
-      #   with:
-      #     files: ./Stirling-PDF-${{ matrix.platform }}-installer.${{ matrix.ext }}
+      - name: Generate key pair
+        run: cosign generate-key-pair
+
+      - name: Sign and generate attestations
+        run: |
+          cosign sign-blob \
+            --key ./cosign.key \
+            --yes \
+            --output-signature ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}.sig \
+            ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}
+
+          cosign attest-blob \
+            --predicate - \
+            --key ./cosign.key \
+            --yes \
+            --output-attestation ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}.intoto.jsonl \
+            ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}
+
+          cosign verify-blob \
+            --key ./cosign.pub \
+            --signature ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}.sig \
+            ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}
+
+      - name: Upload signed artifacts
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          name: signed-${{ matrix.platform }}
+          path: |
+            ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.*
+
+  release:
+    needs: [read_versions, sign_verify]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            extra: "-installer"
+            platform: win
+            ext: exe
+          # - os: macos-latest
+          #   extra: "-installer"
+          #   platform: mac
+          #   ext: dmg
+          - os: ubuntu-latest
+            extra: ""
+            platform: linux
+            ext: deb
+    steps:
+      - name: Download signed artifacts
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: signed-${{ matrix.platform }}
+
+      - name: Upload binaries, attestations and signatures to Release and create GitHub Release
+        uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
+        with:
+          tag_name: v${{ needs.read_versions.outputs.version }}
+          generate_release_notes: true
+          files: |
+            ./${{ matrix.platform }}-Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.*
