--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -141,7 +141,9 @@ jobs:
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: ${{ matrix.file_suffix }}signed
-          path: ./*
+          path: |
+            ./*
+            !cosign.*
 
   # release-no-install:
   #   needs: [read_versions, sign_verify-no-install]
