--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -111,31 +111,31 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R
 
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
+      # - name: Install Cosign
+      #   uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
 
-      - name: Generate key pair
-        run: cosign generate-key-pair
+      # - name: Generate key pair
+      #   run: cosign generate-key-pair
 
-      - name: Sign and generate attestations
-        run: |
-          cosign sign-blob \
-            --key ./cosign.key \
-            --yes \
-            --output-signature ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.sig \
-            ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
+      # - name: Sign and generate attestations
+      #   run: |
+      #     cosign sign-blob \
+      #       --key ./cosign.key \
+      #       --yes \
+      #       --output-signature ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.sig \
+      #       ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
-          cosign attest-blob \
-            --predicate - \
-            --key ./cosign.key \
-            --yes \
-            --output-attestation ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.intoto.jsonl \
-            ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
+      #     cosign attest-blob \
+      #       --predicate - \
+      #       --key ./cosign.key \
+      #       --yes \
+      #       --output-attestation ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.intoto.jsonl \
+      #       ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
-          cosign verify-blob \
-            --key ./cosign.pub \
-            --signature ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.sig \
-            ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
+      #     cosign verify-blob \
+      #       --key ./cosign.pub \
+      #       --signature ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe.sig \
+      #       ./win-Stirling-PDF-no-install-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
       - name: Upload signed artifacts
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
@@ -144,37 +144,6 @@ jobs:
           path: |
             ./*
             !cosign.*
-
-  # release-no-install:
-  #   needs: [read_versions, sign_verify-no-install]
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: write
-  #   strategy:
-  #     matrix:
-  #       enable_security: [true, false]
-  #       include:
-  #         - enable_security: true
-  #           file_suffix: "with-login-"
-  #         - enable_security: false
-  #           file_suffix: ""
-  #   steps:
-  #     - name: Download signed artifacts
-  #       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-  #       with:
-  #         name: ${{ matrix.file_suffix }}signed
-
-  #     - name: Display structure of downloaded files
-  #       run: ls -R
-
-  #     - name: Upload binaries, attestations and signatures to Release and create GitHub Release
-  #       uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
-  #       with:
-  #         tag_name: v${{ needs.read_versions.outputs.version }}
-  #         generate_release_notes: true
-          # files: |
-          #   ./libs/Stirling-PDF*
-          #   ./launch4j/Stirling-PDF-Server*
 
   build-installers:
     needs: read_versions
@@ -322,29 +291,23 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    strategy:
-      matrix:
-        include:
-          - os: windows
-            extra: "-installer"
-            platform: win-
-          # - os: macos
-          #   extra: ""
-          #   platform: mac-
-          - os: ubuntu
-            extra: ""
-            platform: linux-
-          - os: stirling-without-login
-            extra: ""
-            platform: ""
-          - os: stirling-with-login
-            extra: ""
-            platform: "with-login-"
     steps:
+      - name: Download win-signed artifacts
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: win-signed
+      - name: Download linux-signed artifacts
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: linux-signed
+      - name: Download with-login-signed artifacts
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: with-login-signed
       - name: Download signed artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: ${{ matrix.platform }}signed
+          name: signed
       - name: Display structure of downloaded files
         run: ls -R
       - name: Upload binaries, attestations and signatures to Release and create GitHub Release
@@ -352,4 +315,6 @@ jobs:
         with:
           tag_name: v${{ needs.read_versions.outputs.version }}
           generate_release_notes: true
-          files: ./*
+          files: |
+            ./*
+            !cosign.*
